--- a/src/main/java/com/borwell/movingmap/ui/mapwindows/overlays/HeightBarMockup.form
+++ b/src/main/java/com/borwell/movingmap/ui/mapwindows/overlays/HeightBarMockup.form
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.borwell.movingmap.ui.HeightBarMockup">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.borwell.movingmap.ui.mapwindows.overlays.HeightBarMockup">
   <grid id="27dc6" binding="mHeightBar" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="200" height="700"/>
     </constraints>
     <properties>
-      <background color="-16777216"/>
+      <background color="-3618616"/>
       <doubleBuffered value="false"/>
       <enabled value="true"/>
       <maximumSize width="200" height="1000"/>
       <minimumSize width="200" height="700"/>
       <opaque value="true"/>
     </properties>
-    <border type="line"/>
+    <border type="bevel-raised"/>
     <children>
       <component id="14b91" class="javax.swing.JLabel" binding="mHeightLabel">
         <constraints border-constraint="North"/>
@@ -21,13 +21,14 @@
           <font name="Consolas" size="20" style="1"/>
           <foreground color="-525057"/>
           <horizontalAlignment value="0"/>
-          <maximumSize width="140" height="25"/>
-          <minimumSize width="140" height="25"/>
+          <horizontalTextPosition value="0"/>
+          <maximumSize width="140" height="30"/>
+          <minimumSize width="140" height="30"/>
           <opaque value="true"/>
-          <preferredSize width="140" height="25"/>
+          <preferredSize width="140" height="30"/>
           <requestFocusEnabled value="false"/>
           <text value="0 ft"/>
-          <verticalTextPosition value="3"/>
+          <verticalTextPosition value="0"/>
         </properties>
       </component>
     </children>
