--- a/src/main/java/com/borwell/movingmap/ui/mapwindows/overlays/HeightBarMockup.form
+++ b/src/main/java/com/borwell/movingmap/ui/mapwindows/overlays/HeightBarMockup.form
@@ -31,6 +31,14 @@
           <verticalTextPosition value="0"/>
         </properties>
       </component>
+      <grid id="312e8" binding="mPanelOverlay" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+        <constraints border-constraint="Center"/>
+        <properties>
+          <opaque value="false"/>
+        </properties>
+        <border type="none"/>
+        <children/>
+      </grid>
     </children>
   </grid>
 </form>
