--- a/src/main/java/com/borwell/movingmap/ui/mapwindows/overlays/HeightBarOverlay.form
+++ b/src/main/java/com/borwell/movingmap/ui/mapwindows/overlays/HeightBarOverlay.form
@@ -6,18 +6,22 @@
     </constraints>
     <properties>
       <background color="-3618616"/>
-      <doubleBuffered value="false"/>
+      <doubleBuffered value="true"/>
       <enabled value="true"/>
-      <maximumSize width="200" height="1000"/>
-      <minimumSize width="200" height="700"/>
-      <opaque value="true"/>
+      <focusable value="false"/>
+      <maximumSize width="160" height="1000"/>
+      <minimumSize width="160" height="700"/>
+      <opaque value="false"/>
     </properties>
     <border type="bevel-raised"/>
     <children>
       <grid id="312e8" binding="mPanelOverlay" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
         <constraints border-constraint="Center"/>
         <properties>
-          <opaque value="true"/>
+          <doubleBuffered value="true"/>
+          <enabled value="false"/>
+          <focusable value="false"/>
+          <opaque value="false"/>
         </properties>
         <border type="none"/>
         <children/>
